--- a/nginx/conf.d/lb.conf
+++ b/nginx/conf.d/lb.conf
@@ -1,12 +1,12 @@
-upstream frontend { 
+upstream frontend {
     zone frontend 64k;
     server frontend-svc.f5poc.svc.cluster.local;
 }
-upstream api { 
+upstream api {
     zone frontend 64k;
     server api-svc.f5poc.svc.cluster.local;
 }
-upstream ws { 
+upstream ws {
     zone frontend 64k;
     server ws-svc.f5poc.svc.cluster.local;
 }
@@ -47,5 +47,21 @@ server {
     server_name media.myapp.com;
     location / {
         alias /usr/share/nginx/vdo;
+    }
+}
+
+server {
+    listen 80;
+    server_name dashboard.myapp.com;
+    # ...
+
+    location /api {
+        api write=on;
+        # allow 192.168.1.0/24;
+        # deny  all;
+    }
+
+    location = /dashboard.html {
+        root /usr/share/nginx/html;
     }
 }
