edit share zone

--- a/nginx/conf.d/lb.conf
+++ b/nginx/conf.d/lb.conf
@@ -3,11 +3,11 @@ upstream frontend {
     server frontend-svc.f5poc.svc.cluster.local;
 }
 upstream api {
-    zone frontend 64k;
+    zone api 64k;
     server api-svc.f5poc.svc.cluster.local;
 }
 upstream ws {
-    zone frontend 64k;
+    zone ws 64k;
     server ws-svc.f5poc.svc.cluster.local;
 }
 server {
