--- a/nginx/conf.d/lb.conf
+++ b/nginx/conf.d/lb.conf
@@ -11,9 +11,9 @@ upstream ws {
     server ws-svc.f5poc.svc.cluster.local;
 }
 server {
-    status_zone myapp.com;
+    status_zone myapp.test;
     listen 80;
-    server_name web.myapp.com www.myapp.com;
+    server_name web.myapp.test www.myapp.test;
     location / {
         proxy_pass http://frontend;
         health_check;
@@ -23,18 +23,18 @@ server {
     }
 }
 server {
-    status_zone api.myapp.com;
+    status_zone api.myapp.test;
     listen 80;
-    server_name api.myapp.com;
+    server_name api.myapp.test;
     location / {
         proxy_pass http://api;
         health_check;
     }
 }
 server {
-    status_zone ws.myapp.com;
+    status_zone ws.myapp.test;
     listen 80;
-    server_name ws.myapp.com;
+    server_name ws.myapp.test;
     location / {
         proxy_pass http://ws;
         health_check;
@@ -42,9 +42,9 @@ server {
 }
 
 server {
-    status_zone media.myapp.com;
+    status_zone media.myapp.test;
     listen 80;
-    server_name media.myapp.com;
+    server_name media.myapp.test;
     location / {
         alias /usr/share/nginx/vdo;
     }
@@ -52,7 +52,7 @@ server {
 
 server {
     listen 80;
-    server_name dashboard.myapp.com;
+    server_name dashboard.myapp.test;
     # ...
 
     location /api {
