--- a/nginx/conf.d/lb.conf
+++ b/nginx/conf.d/lb.conf
@@ -37,7 +37,7 @@ server {
     server_name ws.myapp.test;
     location / {
         proxy_pass http://ws;
-        health_check;
+        #health_check;
     }
 }
 
