--- a/nginx/conf.d/lb.conf
+++ b/nginx/conf.d/lb.conf
@@ -23,16 +23,16 @@ server {
     }
 }
 server {
-    status_zone api.myapp.test;
+    status_zone api.myapp.com;
     listen 80;
-    server_name api.myapp.test;
+    server_name api.myapp.com;
     location / {
         proxy_pass http://api;
         health_check;
     }
 }
 server {
-    status_zone ws.myapp.test;
+    status_zone ws.myapp.com;
     listen 80;
     server_name ws.myapp.test;
     location / {
@@ -42,9 +42,9 @@ server {
 }
 
 server {
-    status_zone media.myapp.test;
+    status_zone media.myapp.com;
     listen 80;
-    server_name media.myapp.test;
+    server_name media.myapp.com;
     location / {
         alias /usr/share/nginx/vdo;
     }
@@ -52,7 +52,7 @@ server {
 
 server {
     listen 80;
-    server_name dashboard.myapp.test;
+    server_name dashboard.myapp.com;
     # ...
 
     location /api {
