--- a/nginx/conf.d/lb.conf
+++ b/nginx/conf.d/lb.conf
@@ -11,9 +11,9 @@ upstream ws {
     server ws-svc.f5poc.svc.cluster.local;
 }
 server {
-    status_zone myapp.test;
+    status_zone myapp.com;
     listen 80;
-    server_name web.myapp.test www.myapp.test;
+    server_name web.myapp.com www.myapp.com;
     location / {
         proxy_pass http://frontend;
         health_check;
@@ -34,7 +34,7 @@ server {
 server {
     status_zone ws.myapp.com;
     listen 80;
-    server_name ws.myapp.test;
+    server_name ws.myapp.com;
     location / {
         proxy_pass http://ws;
         #health_check;
