--- a/nginx/conf.d/lb.conf
+++ b/nginx/conf.d/lb.conf
@@ -1,14 +1,15 @@
+resolver kube-dns.kube-system.svc.cluster.local valid=5s;
 upstream frontend {
     zone frontend 64k;
-    server frontend-svc.f5poc.svc.cluster.local;
+    server frontend-svc.f5poc.svc.cluster.local service=_http._tcp resolve;
 }
 upstream api {
     zone api 64k;
-    server api-svc.f5poc.svc.cluster.local;
+    server api-svc.f5poc.svc.cluster.local service=_http._tcp resolve;
 }
 upstream ws {
     zone ws 64k;
-    server ws-svc.f5poc.svc.cluster.local;
+    server ws-svc.f5poc.svc.cluster.local service=_http._tcp resolve;
 }
 server {
     status_zone myapp.com;
