add join request

--- a/nginx/conf.d/lb.conf
+++ b/nginx/conf.d/lb.conf
@@ -31,6 +31,13 @@ server {
         proxy_pass http://api;
         health_check;
     }
+    location /front {
+        js_content demo.join_subrequests;
+    }
+
+    location /myapi/ {
+        proxy_pass http://api/;
+    }
 }
 server {
     status_zone ws.myapp.com;
