--- a/nginx/conf.d/lb.conf
+++ b/nginx/conf.d/lb.conf
@@ -31,7 +31,7 @@ server {
         proxy_pass http://api;
         health_check;
     }
-    location /front {
+    location /frontpage {
         js_content demo.join_subrequests;
     }
 
