--- a/nginx/conf.d/lb.conf
+++ b/nginx/conf.d/lb.conf
@@ -28,6 +28,8 @@ server {
     listen 80;
     server_name api.myapp.com;
     location / {
+        sub_filter_once off;
+        sub_filter 'server_hostname' '$upstream_last_server_name';
         proxy_pass http://api;
         health_check;
     }
