--- a/nginx/conf.d/lb.conf
+++ b/nginx/conf.d/lb.conf
@@ -40,18 +40,18 @@ server {
     location /myapi/ {
         proxy_pass http://api/;
     }
-    location /secure/ {
-        auth_jwt "closed site";
-        auth_jwt_key_request /_jwks_uri;
-        # proxy_set_header Authorization "Bearer $jwt_payload";
-        proxy_pass http://api/;
-    }
+    # location /secure/ {
+    #     auth_jwt "closed site";
+    #     auth_jwt_key_request /_jwks_uri;
+    #     # proxy_set_header Authorization "Bearer $jwt_payload";
+    #     proxy_pass http://api/;
+    # }
 
-    location = /_jwks_uri {
-        internal;
-        proxy_method GET;
-        proxy_pass https://keycloak.myapp.com/realms/master/protocol/openid-connect/certs; # Obtain keys from here
-    }
+    # location = /_jwks_uri {
+    #     internal;
+    #     proxy_method GET;
+    #     proxy_pass https://keycloak.myapp.com/realms/master/protocol/openid-connect/certs; # Obtain keys from here
+    # }
 }
 server {
     status_zone ws.myapp.com;
