--- a/nginx/conf.d/lb.conf
+++ b/nginx/conf.d/lb.conf
@@ -1,3 +1,4 @@
+js_import /etc/nginx/conf.d/demo.js;
 resolver kube-dns.kube-system.svc.cluster.local valid=5s;
 upstream frontend {
     zone frontend 64k;
