--- a/nginx/conf.d/lb.conf
+++ b/nginx/conf.d/lb.conf
@@ -1,4 +1,14 @@
-js_import /etc/nginx/conf.d/demo.js;
+js_import /etc/nginx/conf.d/join.js;
+js_import /etc/nginx/conf.d/fetch.js;
+
+map $uri $uri_prefix {
+    ~^(?<p>.+)\/.+$ $p;
+}
+
+map $uri $uri_suffix {
+    ~^.+\/(?<s>.+)$ $s;
+}
+
 resolver kube-dns.kube-system.svc.cluster.local valid=5s;
 upstream frontend {
     zone frontend 64k;
@@ -35,9 +45,11 @@ server {
         health_check;
     }
     location /frontpage {
-        js_content demo.join_subrequests;
+        js_content join.join_subrequests;
     }
-
+    location /profile {
+        js_content fetch.getProfile;
+    }
     location /myapi/ {
         proxy_pass http://api/;
     }
