--- a/nginx/conf.d/lb.conf
+++ b/nginx/conf.d/lb.conf
@@ -22,6 +22,10 @@ upstream ws {
     zone ws 64k;
     server ws-svc.f5poc.svc.cluster.local service=_http._tcp resolve;
 }
+upstream login {
+    zone login 64k;
+    server login-svc.f5poc.svc.cluster.local service=_http._tcp resolve;
+}
 server {
     status_zone myapp.com;
     listen 80;
@@ -98,5 +102,15 @@ server {
 
     location = /dashboard.html {
         root /usr/share/nginx/html;
+    }
+}
+
+server {
+    status_zone login.myapp.com;
+    listen 80;
+    server_name login.myapp.com;
+    location / {
+        proxy_pass http://login;
+        health_check;
     }
 }
