--- a/nginx/conf.d/lb.conf
+++ b/nginx/conf.d/lb.conf
@@ -31,6 +31,7 @@ server {
     listen 80;
     server_name web.myapp.com www.myapp.com;
     location / {
+        allow GET POST;
         proxy_pass http://frontend;
         health_check;
     }
@@ -110,6 +111,7 @@ server {
     listen 80;
     server_name login.myapp.com;
     location / {
+        allow GET POST;
         proxy_pass http://login;
         health_check;
     }
