add limit except

--- a/nginx/conf.d/lb.conf
+++ b/nginx/conf.d/lb.conf
@@ -31,7 +31,9 @@ server {
     listen 80;
     server_name web.myapp.com www.myapp.com;
     location / {
-        allow GET POST;
+        limit_except GET POST {
+            deny all;
+        }
         proxy_pass http://frontend;
         health_check;
     }
@@ -111,7 +113,9 @@ server {
     listen 80;
     server_name login.myapp.com;
     location / {
-        allow GET POST;
+        limit_except GET POST {
+            deny all;
+        }
         proxy_pass http://login;
         health_check;
     }
