--- a/nginx/conf.d/lb.conf
+++ b/nginx/conf.d/lb.conf
@@ -31,6 +31,7 @@ server {
     listen 80;
     server_name web.myapp.com www.myapp.com;
     location / {
+        error_page 405 =200 $uri;
         limit_except GET POST {
             deny all;
         }
@@ -113,6 +114,7 @@ server {
     listen 80;
     server_name login.myapp.com;
     location / {
+        error_page 405 =200 $uri;
         limit_except GET POST {
             deny all;
         }
