--- a/nginx/conf.d/lb.conf
+++ b/nginx/conf.d/lb.conf
@@ -26,6 +26,10 @@ upstream login {
     zone login 64k;
     server login-svc.f5poc.svc.cluster.local service=_http._tcp resolve;
 }
+upstream keycloak {
+    zone keycloak 64k;
+    server keycloak.f5poc.svc.cluster.local service=_http._tcp resolve;
+}
 server {
     status_zone myapp.com;
     listen 80;
@@ -113,6 +117,18 @@ server {
     error_page 405 =200 $uri;
     location / {
         proxy_pass http://login;
+        health_check;
+    }
+}
+server {
+    status_zone keycloak.myapp.com;
+    listen 443 ssl;
+    server_name keycloak.myapp.com;
+    ssl_certificate /etc/nginx/ssl/myapp.com.crt;
+    ssl_certificate_key /etc/nginx/ssl/myapp.com.key;
+    #error_page 405 =200 $uri;
+    location / {
+        proxy_pass http://keycloak;
         health_check;
     }
 }
